chore: Update documentation and settings

--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,7 @@
 	"scm.inputFontSize": 14,
 	"window.zoomLevel": 0,
 	"editor.fontFamily": "JetBrainsMono Nerd Font",
+	// "editor.fontFamily": "Iosevka Aile",
 	"terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
 	"scm.inputFontFamily": "JetBrainsMono Nerd Font",
 	"chat.editor.fontFamily": "JetBrainsMono Nerd Font",
@@ -299,7 +300,7 @@
 	},
 
 	// TERMINAL
-	"python.terminal.launchArgs": ["-m", "IPython", "--no-autoindent"],
+	// "python.terminal.launchArgs": ["-m", "IPython", "--no-autoindent"],
 
 	// FORMATTING
 	// editor
@@ -575,7 +576,7 @@
 	"editor.foldingStrategy": "auto",
 
 	// numbering
-	"editor.lineNumbers": "on",
+	"editor.lineNumbers": "off",
 	"editor.glyphMargin": true,
 	"editor.lightbulb.enabled": "off",
 
@@ -816,5 +817,16 @@
 	"debug.disassemblyView.showSourceCode": false,
 	"mermaid-editor.generate.scale": 1,
 	"mermaid-editor.preview.backgroundColor": "#202020",
-	"explorer.excludeGitIgnore": true
+	"explorer.excludeGitIgnore": true,
+	"yaml2json.yamlIndentationSpaces": 4,
+	"jsonFlow.graph.nodeHeight": 30,
+	"jsonFlow.graph.nodeWidth": 100,
+	"jsonFlow.graph.edgeColor": "red",
+	"indentRainbow.errorColor": "rgba(128,32,32,0.0)",
+	"[csv]": {
+		"editor.inlayHints.maximumLength": 0,
+		"editor.inlayHints.fontFamily": ""
+	},
+	"convertToAsciiArt.favoriteFont": "Star Wars",
+	"editor.suggest.showWords": false
 }
